complete, except slight issue with left alignment

--- a/master.css
+++ b/master.css
@@ -1,12 +1,64 @@
-html {
-  background:#777777;
-}
 body {
   width:960px;
+  background:#777;
+  margin-left:150px;
 }
-header, nav, section, aside, footer {
+header, nav, footer {
   background: #ebebeb;
+  color: #777;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 18px;
+  text-align:center;
+  padding:7px;
+  margin:10px;
+  /*
+  height:65px;
+  border:8px;*/
 }
-article, {
-  background:#777777;
+section {
+  background: #ebebeb;
+  color: #777;
+  width:495px;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 18px;
+  text-align:center;
+  padding:7px;
+  margin:7px;
+}
+aside {
+  background: #ebebeb;
+  color: #777;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 18px;
+  text-align:center;
+  float:right; 
+  width:418px;
+  height:300px;
+  margin-right: 10px;
+  padding-top:7px;
+}
+article {
+  background:#777;
+  color:#ebebeb;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 18px;
+  text-align:center;
+  padding:7px;
+  margin:7px;
+}
+.content {
+  width:438px;
+}
+p.clear {
+  clear:left;
+
+}
+h2 {
+  padding:7px;
+  margin:7px;
+}
+/*
+p {
+  padding:7px;
+  margin:7px;
 }
